make somehow key prtesses work with sdl to nes rendering

--- a/sdl-cef/CMakeLists.txt
+++ b/sdl-cef/CMakeLists.txt
@@ -10,6 +10,9 @@ find_package(SDL2 REQUIRED)
 find_package(SDL2_image REQUIRED)
 include_directories(${SDL2_INCLUDE_DIR})
 
+#FIND_LINUX_LIBRARIES("gmodule-2.0 gtk+-3.0 gthread-2.0 gtk+-unix-print-3.0 xi")
+FIND_LINUX_LIBRARIES("gmodule-2.0 gtk+-2.0 gthread-2.0 gtk+-unix-print-2.0 gtkglext-1.0")
+
 #
 # Source files.
 #
